engine/mono/Imgui/imgui.cs


        // ../../imgui/imgui.h:496
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SliderFloat@ImGui@@YA_NPEBDPEAMMM0M@Z")]
        public static extern bool SliderFloat(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v,
            float v_min,
            float v_max,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format,
            float power = 1.0f
        );

        // overload
        public static bool SliderFloat(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v,
            float v_min,
            float v_max
        )
        {
            return SliderFloat(label, ref v, v_min, v_max, "%.3f");
        }

        // ../../imgui/imgui.h:497
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SliderFloat2@ImGui@@YA_NPEBDQEAMMM0M@Z")]
        public static extern bool SliderFloat2(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v,
            float v_min,
            float v_max,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format,
            float power = 1.0f
        );
        // overload
        public static bool SliderFloat2(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v,
            float v_min,
            float v_max
        )
        {
            return SliderFloat2(label, ref v, v_min, v_max, "%.3f");
        }

        // ../../imgui/imgui.h:498
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SliderFloat3@ImGui@@YA_NPEBDQEAMMM0M@Z")]
        public static extern bool SliderFloat3(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v,
            float v_min,
            float v_max,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format,
            float power = 1.0f
        );
        // overload
        public static bool SliderFloat3(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v,
            float v_min,
            float v_max
        )
        {
            return SliderFloat3(label, ref v, v_min, v_max, "%.3f");
        }

        // ../../imgui/imgui.h:499
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SliderFloat4@ImGui@@YA_NPEBDQEAMMM0M@Z")]
        public static extern bool SliderFloat4(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v,
            float v_min,
            float v_max,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format,
            float power = 1.0f
        );
        // overload
        public static bool SliderFloat4(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v,
            float v_min,
            float v_max
        )
        {
            return SliderFloat4(label, ref v, v_min, v_max, "%.3f");
        }

        // ../../imgui/imgui.h:500
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SliderAngle@ImGui@@YA_NPEBDPEAMMM0@Z")]
        public static extern bool SliderAngle(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v_rad,
            float v_degrees_min,
            float v_degrees_max,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format
        );
        // overload
        public static bool SliderAngle(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v_rad,
            float v_degrees_min = -360.0f,
            float v_degrees_max = +360.0f
        )
        {
            return SliderAngle(label, ref v_rad, v_degrees_min, v_degrees_max, "%.0f deg");
        }

        // ../../imgui/imgui.h:501
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SliderInt@ImGui@@YA_NPEBDPEAHHH0@Z")]
        public static extern bool SliderInt(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int v,
            int v_min,
            int v_max,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format
        );
        // overload
        public static bool SliderInt(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int v,
            int v_min,
            int v_max
        )
        {
            return SliderInt(label, ref v, v_min, v_max, "%d");
        }

        // ../../imgui/imgui.h:502
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SliderInt2@ImGui@@YA_NPEBDQEAHHH0@Z")]
        public static extern bool SliderInt2(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int v,
            int v_min,
            int v_max,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format
        );
        // overload
        public static bool SliderInt2(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int v,
            int v_min,
            int v_max
        )
        {
            return SliderInt2(label, ref v, v_min, v_max, "%d");
        }

        // ../../imgui/imgui.h:503
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SliderInt3@ImGui@@YA_NPEBDQEAHHH0@Z")]
        public static extern bool SliderInt3(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int v,
            int v_min,
            int v_max,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format
        );
        // overload
        public static bool SliderInt3(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int v,
            int v_min,
            int v_max
        )
        {
            return SliderInt3(label, ref v, v_min, v_max, "%d");
        }

        // ../../imgui/imgui.h:504
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SliderInt4@ImGui@@YA_NPEBDQEAHHH0@Z")]
        public static extern bool SliderInt4(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int v,
            int v_min,
            int v_max,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format
        );
        // overload
        public static bool SliderInt4(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref int v,
            int v_min,
            int v_max
        )
        {
            return SliderInt4(label, ref v, v_min, v_max, "%d");
        }

        // ../../imgui/imgui.h:505
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SliderScalar@ImGui@@YA_NPEBDHPEAXPEBX20M@Z")]
        public static extern bool SliderScalar(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            int data_type,
            IntPtr p_data,
            IntPtr p_min,
            IntPtr p_max,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format = default,
            float power = 1.0f
        );

        // ../../imgui/imgui.h:506
        [DllImport(Engine.Paths.Exe, EntryPoint = "?SliderScalarN@ImGui@@YA_NPEBDHPEAXHPEBX20M@Z")]
        public static extern bool SliderScalarN(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            int data_type,
            IntPtr p_data,
            int components,
            IntPtr p_min,
            IntPtr p_max,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format = default,
            float power = 1.0f
        );

        // ../../imgui/imgui.h:507
        [DllImport(Engine.Paths.Exe, EntryPoint = "?VSliderFloat@ImGui@@YA_NPEBDAEBUImVec2@@PEAMMM0M@Z")]
        public static extern bool VSliderFloat(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            in Vector2 size,
            ref float v,
            float v_min,
            float v_max,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format,
            float power = 1.0f
        );
        // overload
        public static bool VSliderFloat(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            in Vector2 size,
            ref float v,
            float v_min,
            float v_max
        )
        {
            return VSliderFloat(label, size, ref v, v_min, v_max, "%.3f");
        }

        // ../../imgui/imgui.h:508
        [DllImport(Engine.Paths.Exe, EntryPoint = "?VSliderInt@ImGui@@YA_NPEBDAEBUImVec2@@PEAHHH0@Z")]
        public static extern bool VSliderInt(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            in Vector2 size,
            ref int v,
            int v_min,
            int v_max,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format
        );
        // overload
        public static bool VSliderInt(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            in Vector2 size,
            ref int v,
            int v_min,
            int v_max
        )
        {
            return VSliderInt(label, size, ref v, v_min, v_max, "%d");
        }

        // ../../imgui/imgui.h:509
        [DllImport(Engine.Paths.Exe, EntryPoint = "?VSliderScalar@ImGui@@YA_NPEBDAEBUImVec2@@HPEAXPEBX30M@Z")]
        public static extern bool VSliderScalar(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            in Vector2 size,
            int data_type,
            IntPtr p_data,
            IntPtr p_min,
            IntPtr p_max,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format = default,
            float power = 1.0f
        );

        // ../../imgui/imgui.h:514
        [DllImport(Engine.Paths.Exe, EntryPoint = "?InputText@ImGui@@YA_NPEBDPEAD_KHP6AHPEAUImGuiInputTextCallbackData@@@ZPEAX@Z")]
        public static extern bool InputText(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref sbyte buf,
            ulong buf_size,
            int flags = default,
            ImGuiInputTextCallback callback = default,
            IntPtr user_data = default
        );

        // ../../imgui/imgui.h:515
        [DllImport(Engine.Paths.Exe, EntryPoint = "?InputTextMultiline@ImGui@@YA_NPEBDPEAD_KAEBUImVec2@@HP6AHPEAUImGuiInputTextCallbackData@@@ZPEAX@Z")]
        public static extern bool InputTextMultiline(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref sbyte buf,
            ulong buf_size,
            in Vector2 size = default,
            int flags = default,
            ImGuiInputTextCallback callback = default,
            IntPtr user_data = default
        );

        // ../../imgui/imgui.h:516
        [DllImport(Engine.Paths.Exe, EntryPoint = "?InputTextWithHint@ImGui@@YA_NPEBD0PEAD_KHP6AHPEAUImGuiInputTextCallbackData@@@ZPEAX@Z")]
        public static extern bool InputTextWithHint(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string hint,
            ref sbyte buf,
            ulong buf_size,
            int flags = default,
            ImGuiInputTextCallback callback = default,
            IntPtr user_data = default
        );

        // ../../imgui/imgui.h:517
        [DllImport(Engine.Paths.Exe, EntryPoint = "?InputFloat@ImGui@@YA_NPEBDPEAMMM0H@Z")]
        public static extern bool InputFloat(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v,
            float step,
            float step_fast,
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string format,
            int flags = default
        );
        // overload
        public static bool InputFloat(
            [MarshalAs(UnmanagedType.LPUTF8Str), In] string label,
            ref float v,
            float step = default,
            float step_fast = default
        )
        {
            return InputFloat(label, ref v, step, step_fast, "%.3f");
        }
